# ChangeLog for dev-haskell/arrows
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-haskell/cvs-repo/gentoo-x86/dev-haskell/arrows/ChangeLog,v 1.10 2007/12/12 13:09:24 fmccor Exp $

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> arrows-0.2.1.ebuild:
  Sparc stable --- part of Bug #201984.

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> arrows-0.2.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> arrows-0.2.1.ebuild:
  stable x86, bug 201984

  11 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> arrows-0.2.1.ebuild:
  Marked ~ia64.

  09 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> arrows-0.2.1.ebuild:
  Fix building arrows-0.2.1 with current Cabal.

*arrows-0.2.1 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +arrows-0.2.1.ebuild:
  New version from ghc-6.6.1 extralibs collection.

*arrows-0.2 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +arrows-0.2.ebuild,
  -arrows-2.0.ebuild:
  Version number was incorrect, should be 0.2 not 2.0. Fortunately this
  package is still p.masked so we can get away with making this fix.
  Also, use dev-lang/ghc rather than virtual/ghc.

  06 Apr 2007; Chris Parrott <cparrott@gentoo.org> arrows-2.0.ebuild:
  added ~ppc and ~sparc keywords

  04 Apr 2007; Chris Parrott <cparrott@gentoo.org> arrows-2.0.ebuild:
  added ~alpha keyword

*arrows-2.0 (17 Mar 2007)

  17 Mar 2007; Lennart Kolmodin <kolmodin@gentoo.org> +metadata.xml,
  +arrows-2.0.ebuild:
  Add modular lib to ghc 6.6. See bug 151012
