@@ -1,6 +1,10 @@
 # ChangeLog for dev-haskell/arrows
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-haskell/cvs-repo/gentoo-x86/dev-haskell/arrows/ChangeLog,v 1.10 2007/12/12 13:09:24 fmccor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-haskell/cvs-repo/gentoo-x86/dev-haskell/arrows/ChangeLog,v 1.11 2007/12/13 17:58:29 dcoutts Exp $
+
+  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> arrows-0.2.ebuild,
+  arrows-0.2.1.ebuild:
+  Fixes for compatability with cabal-1.2 and ghc-6.8.
 
   12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> arrows-0.2.1.ebuild:
   Sparc stable --- part of Bug #201984.
